# opensql-mariadb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSION  azure-pipelines-asan.yml  azure-pipelines-debug.yml  azure-pipelines-installtest.yml  azure-pipelines-mac.yml  azure-pipelines-mtr.yml  azure-pipelines-upgrade.yml  azure-pipelines.yml  configure.cmake
azure/: fetch-unpack-tarball.yml  install-galera.yml  prepare-vm-for-installation.yml  run-mtr-suites.yml  stage3-rolling-upgrade.yml  stage3-upgrade.yml  test-linux-tarball.yml  untitled.yaml
azure/stage0/: build-binary-tarballs-asan.yml  build-binary-tarballs.yml  build-deb-packages.yml  build-macos-packages.yml  build-rpm-packages.yml  build-source-tarball.yml  build-windows-packages.yml  extract-source-tarball.yml
azure/tests/: mac-mtr-test.yml  run-acceptance-tests.yml  run-columnstore-test.yml  (+3 more)
client/: client_priv.h  mysqlbinlog.cc  mysqldump.c  mysqltest.cc
cmake/: cpack_rpm.cmake  cpack_source_ignore_files.cmake  install_macros.cmake  mysql_add_executable.cmake  mysql_version.cmake  plugin.cmake  symlinks.cmake
debian/: autobake-deb.sh  control  mariadb-columnstore-platform.install  mariadb-plugin-columnstore.install  mariadb-plugin-hashicorp-key-management.install  mariadb-plugin-mroonga.install  mariadb-plugin-tokudb.install  mariadb-server-10.4.install  mariadb-test.install  mariadb-test.links  rules
extra/: my_print_defaults.c
include/: maria.h  my_base.h  my_pthread.h  mysql.h  mysql.h.pp
libmysqld/: CMakeLists.txt  libmysql.c
man/: mysqlbinlog.1
mysql-test/: mysql-test-run.pl  valgrind.supp
mysys/: mf_tempfile.c
scripts/: mysql_install_db.sh  mysql_system_tables_fix.sql  mysqld_safe.sh
sql/: CMakeLists.txt  backup.cc  ddl_log.cc  ddl_log.h  derror.cc  discover.cc  filesort.cc  filesort.h  ha_partition.cc  ha_partition.h  handler.cc  handler.h  item_func.cc  item_strfunc.cc  json_table.cc  json_table.h  lock.cc  log.cc  log_event.cc  log_event.h  log_event_client.cc  log_event_server.cc  multi_range_read.cc  my_json_writer.h  mysqld.cc  mysqld.h  opt_range.cc  partition_info.cc  rowid_filter.cc  rpl_gtid.cc  rpl_gtid.h  semisync_master.cc  slave.cc  sp_head.cc  sql_acl.cc  sql_admin.cc  sql_alter.cc  sql_base.cc  sql_base.h  sql_cache.cc  (+38 more)
storage/columnstore/: CMakeLists.txt
strings/: json_lib.c
support-files/: CMakeLists.txt
(+230 files in other folders)
